Fixed z-index of section image by adding content class div and aligned sound boxes with simpler flex value.

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ section::before {
   content: '';
   display: block;
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   inset: 0;
   background-position: 50% 0;
   background-size: cover;
@@ -297,6 +297,7 @@ nav li:last-child {
   background-repeat: no-repeat;
   color: rgb(240, 240, 240);
 }
+
 /* Sound Design Section */
 p {
   padding: 4px;
@@ -470,16 +471,15 @@ textarea {
     flex-direction: row;
     flex-wrap: wrap;
   }
-  #sound .project-video:nth-child(1) {
-    flex-grow: 2;
+
+  #sound .sound-box:nth-child(1),
+  #sound .sound-box:nth-child(4) {
+    flex: 1 100%;
   }
-  #sound .project-video:nth-child(2),
-  #sound .project-video:nth-child(3) {
-    flex-grow: 1;
-    flex-basis: 0;
-  }
-  #sound .sound-box {
-    flex-grow: 2;
+
+  #sound .sound-box:nth-child(2),
+  #sound .sound-box:nth-child(3) {
+    flex: 1;
   }
 }
 
